--- a/style/style2.css
+++ b/style/style2.css
@@ -41,6 +41,10 @@ footer{
     background: #253b44;
 }
 
+aside{
+    background: #c0af84;
+}
+
 footer #p1{
     color:white;
     padding-top:20px; 
